--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tech Careers</title>
+    <link rel="stylesheet" href="styles.css"
 </head>
 <body>
     <h1>tech careers</h1>
@@ -21,6 +22,6 @@
         ensuring they are completed on time, within budget, and meet the desired objectives. 
         They coordinate teams, manage resources, and communicate progress to stakeholders while addressing risks and challenges.
     </p>
-    
+  
 </body>
 </html>
