--- a/job1info.html
+++ b/job1info.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Artificial inteligence Engineer</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <a href="index.html">Home</a>
@@ -12,7 +13,7 @@
         An artificial intelligence (AI) engineer designs, 
         develops and implements artificial intelligence models and algorithms to solve complex problems and improve business processes. 
     </p>
-
+   <a class="more-info" href="job1info.html"</a>
     <h2>Career Stats</h2>
     <ul>
         <li>12,000+ Number job listings b</li>
@@ -21,5 +22,6 @@
     </ul>
 
     <h5>Source: <a href="https://www.comptia.org/en-us/explore-careers/job-roles/artificial-intelligence-ai-engineer/">CompTIA</a></h5>
+       <a class="more-info" href="job1info.html"</a></a>
 </body>
 </html>
